--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "los-pollos",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "rimraf dist && tsc",
     "preserve": "npm run build",
-    "dev": "nodemon cross-env NODE_ENV=development concurrently \"tsc --watch\" \"nodemon -q src/index.ts",
+    "dev": "nodemon -q src/index.ts",
     "prestart": "npm run build",
     "start": "nodemon cross-env NODE_ENV=production node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Epsilon-partners/los-pollos.git" 
+    "url": "git+https://github.com/Epsilon-partners/los-pollos.git"
   },
   "keywords": [],
   "author": "",
@@ -28,8 +28,9 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/morgan": "^1.9.3", 
+    "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.45",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.9",
     "@types/passport-jwt": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
@@ -49,6 +50,7 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
