--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-NODE_ENV = 
-PORT = 
-MONGODB_URL =
-JWTKEY =
+NODE_ENV=
+PORT=
+MONGODB_URL=
+JWTKEY=
+GMAIL_MAIL=
+GMAIL_PASSWORD=
+PHILCOIN_KEY_SENDGRID=
+FROM_EMAIL=
