--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
+    "firebase": "^9.18.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
